WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174011
BreakingContext::handleReplaced() should use replacedBox instead of m_current.renderer().
https://bugs.webkit.org/show_bug.cgi?id=174011
Summary
BreakingContext::handleReplaced() should use replacedBox instead of m_current...
alan
Reported
2017-06-29 20:46:18 PDT
hopefully we don't mutate the iterator.
Attachments
Patch
(6.64 KB, patch)
2017-06-29 20:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-06-29 20:48:44 PDT
Created
attachment 314221
[details]
Patch
WebKit Commit Bot
Comment 2
2017-06-29 23:21:07 PDT
Comment on
attachment 314221
[details]
Patch Clearing flags on attachment: 314221 Committed
r218989
: <
http://trac.webkit.org/changeset/218989
>
WebKit Commit Bot
Comment 3
2017-06-29 23:21:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug