BreakingContext::handleReplaced() should use replacedBox instead of m_current.renderer(). https://bugs.webkit.org/show_bug.cgi?id=174011

Reviewed by Simon Fraser.

No change in functionality.

* rendering/line/BreakingContext.h:
(WebCore::BreakingContext::handleReplaced):
* rendering/line/LineWidth.cpp:
(WebCore::LineWidth::applyOverhang):
* rendering/line/LineWidth.h:


Canonical link: https://commits.webkit.org/190844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218989 268f45cc-cd09-0410-ab3c-d52691b4dbfc